hphp/test/zend/good/ext/standard/tests/file/filegroup_basic.php.skipif
<?php
if( substr(PHP_OS, 0, 3) == 'WIN') {
  die('skip Not valid for Windows');
}
?>