hphp/test/zend/bad/ext/standard/tests/file/rename_variation13.php.skipif
<?php
if(substr(PHP_OS, 0, 3) == "WIN")
  die("skip. Not for Windows");
?>